test: 100% line and branch coverage; gate raised to 100/100
Adds guard, projection, failure-path and controller-signal tests. Removes dead code
(unreachable catch and padding branches), makes the digest lookup injectable, reports the
serial-key flag from the command, and maps unknown business codes to 409 (ADR-019 contract).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>